Floating keyboard: Change the screen orientation positioning heuristic

Previously, this would anchor the keyboard to the closest edge of the
screen in both the X and Y directions. When the screen orientation or
screen size changes, it would maintain the same pixel distance from
each of those sides. When the keyboard is intentionally anchored in a
corner, this works out great, but when the keyboard is centered along
an edge of the screen, this creates unexpected results since the
distribution of padding on either side of the keyboard has changed
significantly.

This simplifies the logic to simply maintain the ratio of padding on
either side of the keyboard in each direction (referred to in the code
as `[left_|top_]padding_allotment_ratio`. This records the percent of
the available padding that appears to the left or above the keyboard.
This ratio is maintained across screen size changes.

Updated unit test, which lacked non-corner test cases.

Bug: 817226
Change-Id: I13e424f436aaa62cf8aa77626fa27985cbdf24a2
Reviewed-on: https://chromium-review.googlesource.com/940745
Reviewed-by: Yuichiro Hanada <yhanada@chromium.org>
Commit-Queue: Blake O'Hare <blakeo@chromium.org>
Cr-Commit-Position: refs/heads/master@{#539749}
Former-commit-id: d17de42cec53853011021f441540be740eb116e3